# starting-ragchatbot-codebase

./: .flake8  .gitignore  CLAUDE.md  lint.sh  pyproject.toml
backend/: ai_generator.py  app.py  search_tools.py  vector_store.py
backend/tests/: __init__.py  conftest.py  helpers.py  test_ai_generator.py  test_api.py  test_rag_system.py  test_search_tools.py  test_vector_store.py
frontend/: index.html  script.js  style.css
